force-app/main/default/objects/Case/fields/Callback_Number__c.field-meta.xml
<CustomField>
    <fullName>Callback_Number__c</fullName>
    <label>Callback Number</label>
    <type>Phone</type>
</CustomField>