force-app/main/default/objects/Case/fields/Caller_Name__c.field-meta.xml
<CustomField>
    <fullName>Caller_Name__c</fullName>
    <label>Caller Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>