force-app/main/default/objects/Case/recordTypes/Voicemail.recordType-meta.xml
<RecordType>
    <fullName>Voicemail</fullName>
    <active>true</active>
    <businessProcess>Voicemail_Process</businessProcess>
    <description>Record type for inbound voicemail Cases created by the Education voicemail integration. Used to scope the Voicemail Case Layout to voicemail Cases only.</description>
    <label>Voicemail</label>
</RecordType>